# EnergyConsumptionFrameWorkTargetDevice

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
include/structs/: structs.h
include/tcp/: tcp.h
src/: CMakeLists.txt  main.cpp  main.h
src/http/: http.c
src/preproc/: preproc.c
src/wifi/: wifi.c
src/work/: work.c
